--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <div class="game">
 <div class="board-container">
-  <div class="square top left ">1</div>
+  <div class="square top left "></div>
   <div class="square top centre"></div>
   <div class="square top right"></div>
   <div class="square mid left"></div>
