--- a/index.html
+++ b/index.html
@@ -11,18 +11,16 @@
 </head>
 <body>
 
-<div class="game">
 <div class="board-container">
-  <div class="square top left" id="1">1</div>
-  <div class="square top centre" id="2">2</div>
-  <div class="square top right" id="3">3</div>
-  <div class="square mid left" id="4">4</div>
-  <div class="square mid centre" id="5">5</div>
-  <div class="square mid right" id="6">6</div>
-  <div class="square bottom left" id="7">7</div>
-  <div class="square bottom centre" id="8">8</div>
-  <div class="square bottom right" id="9">9</div>
-</div>
+    <div class="square top left" id="1"></div>
+    <div class="square top centre" id="2"></div>
+    <div class="square top right" id="3"></div>
+    <div class="square mid left" id="4"></div>
+    <div class="square mid centre" id="5"></div>
+    <div class="square mid right" id="6"></div>
+    <div class="square bottom left" id="7"></div>
+    <div class="square bottom centre" id="8"></div>
+    <div class="square bottom right" id="9"></div>
 </div>
 
 </body>
