--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <script src="js/tictactoe.js"></script>
 </head>
 <body>
-
+<header></header>
+<div class="container">
 <div class="board-container">
     <div class="square top left" id="1"></div>
     <div class="square top centre" id="2"></div>
@@ -22,6 +23,8 @@
     <div class="square bottom centre" id="8"></div>
     <div class="square bottom right" id="9"></div>
 </div>
+</div>
+
 
 </body>
 </html>
