--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <body>
 <header></header>
 <div class="container">
-<div class="board-container">
+<div class="board-container" style="background-image: url(css/img/spring.jpg)">
+
     <div class="square top left" id="1"></div>
     <div class="square top centre" id="2"></div>
     <div class="square top right" id="3"></div>
@@ -23,6 +24,8 @@
     <div class="square bottom centre" id="8"></div>
     <div class="square bottom right" id="9"></div>
 </div>
+<button class="reset">Play again</button>
+<button id="harder">Make it harder?</button>
 </div>
 
 
