--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Tic Tac Toe</title>
 <link rel="stylesheet" href="css/tictactoe.css">
+<link href="https://fonts.googleapis.com/css2?family=Alegreya&display=swap" rel="stylesheet">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="js/tictactoe.js"></script>
+
 </head>
 <body>
-<header></header>
 <div class="container">
 <div class="board-container" style="background-image: url(css/img/spring.jpg)">
 
@@ -24,8 +25,10 @@
     <div class="square bottom centre" id="8"></div>
     <div class="square bottom right" id="9"></div>
 </div>
-<button class="reset">Play again</button>
+<div class="button-container">
+<button class="btn reset">Play again</button>
 <button id="harder">Make it harder?</button>
+</div>
 </div>
 
 
