--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 <body>
 <div class="container">
 <div class="board-container" style="background-image: url(css/img/spring.jpg)">
-
     <div class="square top left" id="1"></div>
     <div class="square top centre" id="2"></div>
     <div class="square top right" id="3"></div>
@@ -25,6 +24,18 @@
     <div class="square bottom centre" id="8"></div>
     <div class="square bottom right" id="9"></div>
 </div>
+
+<div class="score-board">
+
+  <div class="player1-score">
+  <h4>Player 1:</h4>
+  </div>
+
+  <div class="player2-score">
+  <h4>Player 2:</h4>
+  </div>
+</div>
+
 <div class="button-container">
 <button class="btn reset">Play again</button>
 <button id="harder">Make it harder?</button>
