Winner banner displaying

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 <body>
 <div class="container">
+  <div class="winnerAlert"></div>
 <div class="board-container" style="background-image: url(css/img/spring.jpg)">
     <div class="square top left" id="1"></div>
     <div class="square top centre" id="2"></div>
