Jquery and JS being split into 2 fiels in progress

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Alegreya&display=swap" rel="stylesheet">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="js/tictactoe.js"></script>
+  <script src="js/game-jquery.js"></script>
+  <script src="js/game-js.js"></script>
 
 </head>
 <body>
