--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 </head>
 <body>
 <div class="container">
-  <div class="winnerAlert"></div>
-<div class="board-container" style="background-image: url(css/img/spring.jpg)">
+  <div class="winnerAlert hinge"></div>
+  <div></div>
+<div class="board-container" style="background-image: url(css/img/spring.jpg)" alt="pink to green gradient coloured square with white lines to make tic tac toe board">
     <div class="square top left" id="1"></div>
     <div class="square top centre" id="2"></div>
     <div class="square top right" id="3"></div>
@@ -27,19 +28,20 @@
     <div class="square bottom centre" id="8"></div>
     <div class="square bottom right" id="9"></div>
 </div>
+<div></div>
 
 <div class="score-board">
 
-  <div class="player1-score">
+  <div class="player1-score" alt="pink to green gradient circle">
   <h4>Player 1:</h4>
   </div>
 
-  <div class="player2-score">
+  <div class="player2-score" alt="pink to green gradient circle">
   <h4>Player 2:</h4>
   </div>
 </div>
 
-<div class="button-container">
+<div class="button-container" alt="pink to green gradient button>
 <button class="btn reset">Play again</button>
 <button id="harder">Make it harder?</button>
 </div>
