--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   </div>
 </div>
 
-<div class="button-container" alt="pink to green gradient button>
+<div class="button-container" alt="pink to green gradient button">
 <button class="btn reset">Play again</button>
 <button id="harder">Make it harder?</button>
 </div>
