html syntax cleaned

--- a/index.html
+++ b/index.html
@@ -5,18 +5,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Tic Tac Toe</title>
+
 <link rel="stylesheet" href="css/tictactoe.css">
 <link href="https://fonts.googleapis.com/css2?family=Alegreya&display=swap" rel="stylesheet">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="js/tictactoe.js"></script>
   <script src="js/game-jquery.js"></script>
   <script src="js/game-js.js"></script>
-
 </head>
+
 <body>
 <div class="container">
-  <div class="winnerAlert hinge"></div>
-  <div></div>
+  <div class="winnerAlert"></div>
+
 <div class="board-container" style="background-image: url(css/img/spring.jpg)" alt="pink to green gradient coloured square with white lines to make tic tac toe board">
     <div class="square top left" id="1"></div>
     <div class="square top centre" id="2"></div>
@@ -28,23 +29,22 @@
     <div class="square bottom centre" id="8"></div>
     <div class="square bottom right" id="9"></div>
 </div>
-<div></div>
 
 <div class="score-board">
-
   <div class="player1-score" alt="pink to green gradient circle">
   <h4>Player 1:</h4>
-  </div>
+</div>
 
-  <div class="player2-score" alt="pink to green gradient circle">
+<div class="player2-score" alt="pink to green gradient circle">
   <h4>Player 2:</h4>
   </div>
 </div>
 
 <div class="button-container" alt="pink to green gradient button">
-<button class="btn reset">Play again</button>
-<button id="harder">Make it harder?</button>
+  <button class="btn reset">Play again</button>
+  <button id="harder">Make it harder?</button>
 </div>
+
 </div>
 
 
